refactor(security): update CORS configuration to read allowed origins from environment variables and remove production properties file